Fix a few things

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -16,14 +16,19 @@
     },
     {
       "id": "templateOptions",
-      "description": "Template options.",
       "type": "pickString",
+      "description": "Template options.",
       "options": ["", "-Prompt", "-Stay", "-Stay -Prompt", "-Recopy -Prompt"]
     },
     {
+      "id": "ref",
+      "type": "promptString",
+      "description": "Commit SHA or other VCS reference."
+    },
+    {
       "id": "changeType",
-      "description": "Change type.",
       "type": "pickString",
+      "description": "Change type.",
       "options": ["breaking", "deprecation", "change"]
     }
   ],
@@ -35,6 +40,13 @@
       "label": "setup: Sync with template",
       "type": "shell",
       "command": "scripts/Sync-Template.ps1 ${input:templateOptions}",
+      "icon": { "id": "file-symlink-directory" },
+      "problemMatcher": []
+    },
+    {
+      "label": "setup: Sync with specific template ref",
+      "type": "shell",
+      "command": "scripts/Sync-Template.ps1 ${input:ref} ${input:templateOptions}",
       "icon": { "id": "file-symlink-directory" },
       "problemMatcher": []
     },
@@ -193,7 +205,7 @@
     {
       "label": "task: Bump version",
       "type": "shell",
-      "command": "copier update --vcs-ref=$(git rev-parse HEAD:submodules/template) --defaults --data project_version='${input:version}'; git add .; git commit -m 'Bump version'; git push",
+      "command": "copier update --vcs-ref=$(git rev-parse HEAD:submodules/template) --defaults --data project_version='${input:version}'; git add .; git commit -m 'Bump version'; towncrier build --version '${input:version}'",
       "icon": { "id": "graph-line" },
       "problemMatcher": []
     }
