--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -205,7 +205,7 @@
     {
       "label": "task: Bump version",
       "type": "shell",
-      "command": "copier update --vcs-ref=$(git rev-parse HEAD:submodules/template) --defaults --data project_version='${input:version}'; git add .; git commit -m 'Bump version'; towncrier build --version '${input:version}'",
+      "command": "copier update --defaults --data project_version='${input:version}'; git add .; git commit -m 'Bump version'; towncrier build --version '${input:version}'",
       "icon": { "id": "graph-line" },
       "problemMatcher": []
     }
