--- a/.copier-answers.yml
+++ b/.copier-answers.yml
@@ -1,5 +1,5 @@
 # Changes here will be overwritten by Copier; NEVER EDIT MANUALLY
-_commit: ccfebe4
+_commit: '8447167'
 _src_path: gh:blakeNaccarato/copier-python
 actions_runner: ubuntu-22.04
 active: true
@@ -9,6 +9,6 @@ project_email: blake.naccarato@gmail.com
 project_name: copier_python
 project_owner_github_username: blakeNaccarato
 project_owner_name: Blake Naccarato
-project_version: 0.0.0
+project_version: 2024.1.1
 python_version: '3.10'
 year_of_project_creation: 2022
