--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,8 @@ build-backend = "flit_core.buildapi"
 
 [project]
 name = "copier_python"
-version = "0.0.0"
-description = "Copier template for Python projects."
+version = "2024.1.1"
+description = "Copier template for Python projects"
 readme = "README.md"
 license = { file = "LICENSE" }
 requires-python = ">=3.10"
