--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -160,7 +160,7 @@ jobs:
           - "3.10"
           - "3.11"
           - "3.12"
-          # - "3.13.0-beta.2"  # ? https://github.com/indygreg/python-zstandard/issues/210
+          - "3.13.0-beta.3"
           # - "3.14.0-alpha.0"  # ? https://github.com/PyO3/pyo3/issues/3555
     runs-on: "${{ matrix.runner }}"
     steps:
