--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -160,8 +160,8 @@ jobs:
           - "3.10"
           - "3.11"
           - "3.12"
-          - "3.13.0-beta.3"
-          # - "3.14.0-alpha.0"  # ? https://github.com/PyO3/pyo3/issues/3555
+          # - "3.13.0-beta.3"  # ? (via myst-nb) https://github.com/crate-py/rpds/issues/72
+          # - "3.14.0-alpha.0"  # ? https://peps.python.org/pep-0745
     runs-on: "${{ matrix.runner }}"
     steps:
       - uses: "actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332" # v4.1.7
