--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,14 @@ description = "Copier template for Python projects"
 readme = "README.md"
 license = { file = "LICENSE" }
 requires-python = ">=3.10"
-classifiers = ["License :: OSI Approved :: MIT License"]
+classifiers = [
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    # "Programming Language :: Python :: 3.13",  # ? (via myst-nb) https://github.com/crate-py/rpds/issues/72
+    # "Programming Language :: Python :: 3.14",  # ? https://peps.python.org/pep-0745
+]
 dependencies = []
 [project.urls]
 Changes = "https://blakeNaccarato.github.io/copier-python/changelog.html"
