--- a/.github/workflows/high.yml
+++ b/.github/workflows/high.yml
@@ -21,6 +21,7 @@ jobs:
         python: ["3.10"]
     runs-on: "${{ matrix.runner }}"
     steps:
+      - run: "foo"
       - uses: "actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332" # v4.1.7
         with:
           submodules: True
