Propagate `continue-on-error` through all jobs

--- a/.github/workflows/high.yml
+++ b/.github/workflows/high.yml
@@ -20,7 +20,6 @@ jobs:
         python: ["3.10"]
     runs-on: "${{ matrix.runner }}"
     steps:
-      - run: "foo"
       - uses: "actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332" # v4.1.7
         with:
           submodules: True
@@ -32,21 +31,9 @@ jobs:
         with:
           name: "lock"
           path: "lock-high.json"
-  check:
-    if: always()
-    needs: "sync"
-    strategy:
-      matrix:
-        runner: ["ubuntu-22.04"]
-        python: ["3.10"]
-    runs-on: "${{ matrix.runner }}"
-    steps:
-      - uses: "re-actors/alls-green@05ac9388f0aebcb5727afa17fcccfecd6f8ec5fe" # v1.2.2
-        with:
-          jobs: ${{ toJSON(needs) }}
   build-docs:
-    if: ${{ success() || failure() }}
-    needs: "check"
+    continue-on-error: true
+    needs: "sync"
     strategy:
       matrix:
         runner: ["ubuntu-22.04"]
@@ -66,7 +53,8 @@ jobs:
       - run: ". scripts/Initialize-Shell.ps1; sphinx-build -EaT docs _site"
       - uses: "actions/upload-pages-artifact@56afc609e74202658d3ffba0e8f6dda462b719fa" # v3.0.1
   ruff:
-    needs: "check"
+    continue-on-error: true
+    needs: "sync"
     strategy:
       matrix:
         runner: ["ubuntu-22.04"]
@@ -85,7 +73,8 @@ jobs:
       - run: "scripts/Sync-Py.ps1"
       - run: ". scripts/Initialize-Shell.ps1; ruff check --no-fix --output-format github ."
   fawltydeps:
-    needs: "check"
+    continue-on-error: true
+    needs: "sync"
     strategy:
       matrix:
         runner: ["ubuntu-22.04"]
@@ -104,7 +93,8 @@ jobs:
       - run: "scripts/Sync-Py.ps1"
       - run: ". scripts/Initialize-Shell.ps1; fawltydeps"
   pyright:
-    needs: "check"
+    continue-on-error: true
+    needs: "sync"
     strategy:
       matrix:
         runner: ["ubuntu-22.04"]
@@ -123,7 +113,8 @@ jobs:
       - run: "scripts/Sync-Py.ps1"
       - run: ". scripts/Initialize-Shell.ps1; pyright"
   test:
-    needs: "check"
+    continue-on-error: true
+    needs: "sync"
     strategy:
       matrix:
         runner:
@@ -148,6 +139,7 @@ jobs:
       - run: "scripts/Sync-Py.ps1 -Version '${{ matrix.python }}'"
       - run: ". scripts/Initialize-Shell.ps1; pytest"
   lock:
+    continue-on-error: true
     needs:
       - "ruff"
       - "fawltydeps"
