--- a/template/.pre-commit-config.yaml
+++ b/template/.pre-commit-config.yaml
@@ -11,6 +11,7 @@ ci:
     - "fawltydeps-docs"
     - "fawltydeps-scripts"
     - "fawltydeps-tests"
+    - "pyright"
     - "pytest-fast-only"
   autoupdate_schedule: "quarterly"
 default_install_hook_types:
@@ -71,6 +72,7 @@ repos:
         language: "system"
         entry: |
           pwsh -Command ". scripts/Initialize-Shell.ps1; pyright"
+        types_or: ["python", "pyi"]
       - id: "pytest-fast-only"
         name: "pytest-fast-only"
         pass_filenames: false
