--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -147,6 +147,8 @@ jobs:
           python-version: "${{ matrix.python }}"
       - run: "scripts/Sync-Py.ps1"
       - uses: "jakebailey/pyright-action@3bdde3b31d26f0f1f5de051b1fbd7a536a9a4e7f" # v4.1.7
+        with:
+          pylance-version: "${{ env.PYRIGHT_PYTHON_PYLANCE_VERSION }}"
   test:
     needs: "sync"
     strategy:
