Capture current value in custom manager. Sync template with changes

--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -12,7 +12,7 @@
     {
       "customType": "regex",
       "fileMatch": ["\\.pylance-version"],
-      "matchStrings": [".*"],
+      "matchStrings": ["(?<currentValue>.+?)"],
       "datasourceTemplate": "github-releases",
       "depNameTemplate": "microsoft/pylance-release"
     }
