--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -19,7 +19,7 @@
   "customManagers": [
     {
       "customType": "regex",
-      "fileMatch": ["\\.pylance-version"],
+      "fileMatch": [".*pylance-version"],
       "matchStrings": ["(?<currentValue>.+)"],
       "datasourceTemplate": "github-releases",
       "depNameTemplate": "microsoft/pylance-release"
