--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -9,6 +9,7 @@
     "enabled": true
   },
   "enabledManagers": [
+    "custom",
     "devcontainer",
     "git-submodules",
     "github-actions",
@@ -20,7 +21,7 @@
     {
       "customType": "regex",
       "fileMatch": [".*pylance-version"],
-      "matchStrings": ["(?<currentValue>.+)"],
+      "matchStrings": ["(?<currentValue>.*?)\\n"],
       "datasourceTemplate": "github-releases",
       "depNameTemplate": "microsoft/pylance-release"
     }
