--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -22,8 +22,9 @@
       "customType": "regex",
       "fileMatch": ["^\\.pylance-version$"],
       "matchStrings": ["^(?<currentValue>\\S+).+$"],
-      "datasourceTemplate": "github-asdfasdfreleases",
-      "depNameTemplate": "microsoft/pylance-release"
+      "datasourceTemplate": "github-releases",
+      "depNameTemplate": "microsoft/pylance-release",
+      "versioningTemplate": "loose"
     }
   ],
   "github-actions": {
