--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -21,8 +21,16 @@
     {
       "description": "Pylance",
       "customType": "regex",
-      "fileMatch": ["^\\.pylance-version$"],
-      "matchStrings": ["^(?<currentValue>.+?)\\n$"],
+      "fileMatch": [
+        "scripts/Initialize-Shell\\.ps1",
+        "\\.devcontainer/devcontainer\\.json",
+        "template/scripts/Initialize-Shell\\.ps1",
+        "template/\\.devcontainer/devcontainer\\.json\\.jinja"
+      ],
+      "matchStrings": [
+        "PYRIGHT_PYTHON_PYLANCE_VERSION = '(?<currentValue>.+?)'",
+        "ms-python.vscode-pylance@(?<currentValue>.+?)"
+      ],
       "datasourceTemplate": "github-releases",
       "depNameTemplate": "microsoft/pylance-release"
     }
