--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -29,7 +29,7 @@
       ],
       "matchStrings": [
         "PYRIGHT_PYTHON_PYLANCE_VERSION = '(?<currentValue>.+)'",
-        "ms-python\\.vscode-pylance@(?<currentValue>\\N+)"
+        "ms-python\\.vscode-pylance@(?<currentValue>\\S+)"
       ],
       "datasourceTemplate": "github-releases",
       "depNameTemplate": "microsoft/pylance-release"
