--- a/template/.pre-commit-config.yaml
+++ b/template/.pre-commit-config.yaml
@@ -117,7 +117,8 @@ repos:
     rev: "v0.4.10"
     hooks:
       - id: "ruff"
-        args: ["--extend-fixable", "PIE790"]
+        args: ["--config", "pyproject.toml", "--extend-fixable", "PIE790"]
         types_or: ["python", "pyi", "jupyter"]
       - id: "ruff-format"
+        args: ["--config", "pyproject.toml"]
         types_or: ["python", "pyi", "jupyter"]
