--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,6 +3,11 @@ exclude: |
     \.copier-answers\.yml
     |changelog/towncrier_template\.md\.jinja
     |lock.*\.json
+    |template/(
+      .*answers_file.*
+      |.*project_name.*
+      |changelog/towncrier_template.md.jinja.jinja
+    )
   $)
 ci:
   skip:
