--- a/template/.vscode/settings.json
+++ b/template/.vscode/settings.json
@@ -31,7 +31,6 @@
   //! File associations
   "files.associations": {
     ".coveragerc": "ini",
-    ".env": "dotenv",
     ".pylintrc": "ini",
     ".root": "plaintext",
     ".sourcery.yaml": "yaml",
@@ -125,6 +124,9 @@
   "vsicons.presets.hideExplorerArrows": true,
   "vsicons.dontShowNewVersionMessage": false,
   //! Filetype extensions
+  //* Built-in Markdown support
+  //? Doesn't play nicely with All Contributors HTML
+  "markdown.validate.referenceLinks.enabled": "ignore",
   //* Markdownlint (MD)
   "[markdown]": {
     "editor.defaultFormatter": "DavidAnson.vscode-markdownlint"
