--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -22,13 +22,11 @@
       "description": "Pylance",
       "customType": "regex",
       "fileMatch": [
-        "^scripts/Initialize-Shell\\.ps1$",
-        "^\\.devcontainer/devcontainer\\.json$",
-        "^template/scripts/Initialize-Shell\\.ps1$",
-        "^template/\\.devcontainer/devcontainer\\.json\\.jinja$"
+        "^pyproject\\.toml$",
+        "^\\.devcontainer/devcontainer\\.json$"
       ],
       "matchStrings": [
-        "PYRIGHT_PYTHON_PYLANCE_VERSION = '(?<currentValue>.+)'",
+        "PYRIGHT_PYTHON_PYLANCE_VERSION = \"(?<currentValue>.+)\"",
         "ms-python\\.vscode-pylance@(?<currentValue>[^\"]+)"
       ],
       "datasourceTemplate": "github-releases",
