--- a/scripts/pyproject.toml
+++ b/scripts/pyproject.toml
@@ -9,13 +9,16 @@ description = "Tools."
 dependencies = [
     # ? Core script tools
     "copier==9.2.0",
-    "cyclopts==2.7.1",
+    "cyclopts==2.9.3",
     "dulwich==0.22.1",
-    "ipython==8.25.0",
+    "ipython==8.26.0",
     "pipx==1.6.0",
+    "pydantic-settings>=2.4.0",
+    "python-dotenv==1.0.1",
     "toml==0.10.2 ; python_version < '3.11'",
 ]
 [project.scripts]
+"copier_python-tools" = "copier_python_tools.__main__:main"
 "copier_python_tools" = "copier_python_tools.__main__:main"
 
 [tool.fawltydeps]
