--- a/.sourcery.yaml
+++ b/.sourcery.yaml
@@ -16,3 +16,5 @@ ignore:
 rule_settings:
   python_version: "3.10"
   enable: ["default"]
+  disable:
+    - "remove-redundant-pass" # Managed by Ruff
