--- a/requirements/dev.in
+++ b/requirements/dev.in
@@ -1,13 +1,13 @@
 --editable .
---editable docs/
---editable scripts/
---editable tests/
+--editable docs
+--editable scripts
+--editable tests
 debugpy==1.8.2
 fawltydeps==0.16.0
 pipdeptree==2.23.0
 pre-commit==3.7.1
 pyright==1.1.369
-ruff==0.4.10
+ruff==0.5.1
 snakeviz==2.2.0
 sourcery==1.19.0
 towncrier==23.11.0
