--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,8 +18,11 @@ jobs:
     strategy:
       matrix:
         runner: ["ubuntu-22.04"]
-        python: ["3.10"]
+        python: ["3.11"]
     runs-on: "${{ matrix.runner }}"
+    environment:
+      name: "release"
+      url: "https://pypi.org/p/copier-python"
     steps:
       - uses: "actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332" # v4.1.7
       - uses: "actions/setup-python@82c7e631bb3cdc910f68e0081d67478d79c6982d" # v5.1.0
