--- a/template/.gitignore
+++ b/template/.gitignore
@@ -1,6 +1,8 @@
 # * -------------------------------------------------------------------------------- * #
 # * Template gitignore
 
+# Ignore local dev environment settings
+*.env
 # local workspace extensions directory
 .vscode/extensions
 # uv binary
